Fixed issue with css of the legend in mobile view showing behind the footer Fixed issue with report not getting title and attributes from popups of non-webmap layers Fixed issue where not getting the title and attribtues was preventing the report from running

--- a/src/css/legendPanel.styl
+++ b/src/css/legendPanel.styl
@@ -40,7 +40,7 @@
     height 300px
     width 100%
     bottom 50px
-    z-index 4
+    z-index 6
     right 0
     &.legend-collapsed
       bottom -310px
